# BE-orm-city

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset_mig.sh  reset_migrations.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_issue_form.yml  02_documentation_issue_form.yml  03_enhancement_issue_form.yml  04_normal_issue_form.yml  issue_form.yml
.github/workflows/: build.yml  create_issue_and_branch.yml  jira_bug_issue.yml  jira_documentation_issue.yml  jira_enhancement_issue.yml  jira_normal_issue.yml  lint.yml  pytest.yml
scripts/: commit-branch-name-add.sh  prepare-commit-msg
src/: manage.py
src/accounts/: admin.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_accounts_model.py  test_accounts_views.py  test_views.py
src/api/: permissions.py  urls.py
src/certificates/: models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
src/certificates/migrations/: 0001_initial.py  0002_delete_certificate.py
src/certificates/tests/: test_certificate.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  docker.py  prod.py
src/core/: middleware.py  permissions.py
src/courses/: admin.py  apps.py  models.py  permissions.py  schema.py  serializers.py  services.py  signals.py  urls.py  views.py
src/courses/migrations/: 0001_initial.py  0002_enrollment_major_category_and_more.py  0002_majorcategory_price.py
src/courses/tests/: test_courses_model.py  test_courses_views.py  test_model.py
src/dashboards/: admin.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
src/dashboards/migrations/: 0001_initial.py  0002_initial.py
src/missions/: admin.py  apps.py  models.py  permissions.py  schema.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
src/missions/migrations/: 0001_initial.py
src/missions/tests/: test_mission_models.py
src/payment/: admin.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
src/payment/migrations/: 0001_initial.py  0002_payment_course.py  0002_rename_user_payment_username_and_more.py  0003_rename_amount_payment_total_amount.py  0003_rename_username_payment_user.py  0004_payment_imp_uid.py  0004_rename_course_payment_major_category_and_more.py  0005_payment_merchant_uid_alter_payment_payment_status_and_more.py
src/payment/tests/: test_payment_views.py  tests_payment_views.py
src/progress/: apps.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
src/videos/: admin.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
trobleshootings/: jw-ts.md  km-ts.md  mw-ts.md
(+10 files in other folders)
